unify: use only item ID to create tasks
